# notescpp

./: README.org  config.h  deps.sh  main.cpp  main_old.cpp  meson.build  notes
.cache/clangd/index/: args.cpp.62FC24303D71630B.idx  args.h.0F07459B6D614959.idx  fonts.c.602EC9DCF95CA4AC.idx  fonts.cpp.A6586E9C1564055D.idx  fonts.h.52612F32981F405A.idx  fontstash.h.9FE564B793B5E8FD.idx  glad.cpp.4DCBEBEEB03C7E88.idx  glad.h.E8DFD4AC2B1E3088.idx  khrplatform.h.95FD06532B725837.idx  main.cpp.794930552B9E76B0.idx  nanovg.c.53DC850370B5550E.idx  nanovg.h.43CFFB5A73CB31C9.idx  nanovg_gl.h.716BB1C70FB79940.idx  stb_image.h.7E60250F84D3F3F5.idx  stb_truetype.h.A3CD6E2C67AC5F4B.idx
include/: args.h  cursor.h  edit_view.h  file_parse.h  fonts.h  membuf.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.cpp
src/: args.cpp  fonts.cpp  membuf.c
